name:                PacketAssembler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/PacketAssembler#readme
license:             BSD3
license-file:        LICENSE
author:              dkpsk
maintainer:          example@example.com
copyright:           2017 dkpsk
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable PacketAssembler
  hs-source-dirs:      src
  main-is:             Program.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, transformers
